@@ -6,6 +6,7 @@
 ~~~~~~~~~~~
 Options to set iconification layout policy.
 Fix compiler warnings on some systems (Stephen Watson).
+Added 'Follow Symbolic Links' menu item (Stephen Watson).
 
 16-May-2002
 ~~~~~~~~~~~
